--- a/cores/style.css
+++ b/cores/style.css
@@ -9,12 +9,12 @@ body {
 :root {
     /* Tema claro - cores do Inatel */
     --primary-color-light: #FFFFFF; /* Branco */
-    --secondary-color-light: #F2F2F2; /* Cinza Claro */
+    --secondary-color-light: #015294; /* Cinza Claro */
     --text-color-light: #333333; /* Texto escuro */
 
     /* Tema escuro - ajuste de contraste */
-    --primary-color-dark: #2C2C2C; /* Cinza Escuro */
-    --secondary-color-dark: #003366; /* Azul Inatel */
+    --primary-color-dark: #015294; /* Cinza Escuro */
+    --secondary-color-dark: #F2F2F2; /* Azul Inatel */
     --text-color-dark: #FFFFFF; /* Texto branco */
     --highlight-color-dark: #FFD700; /* Amarelo Inatel */
 }
