--- a/card/style.css
+++ b/card/style.css
@@ -3,6 +3,7 @@ body {
     font-family: 'Arimo', sans-serif;
     margin: 0;
     padding: 0;
+    overflow-x: hidden; /* Prevenir rolagem horizontal indesejada */
 }
 
 /* Cores e estilos dos temas */
@@ -89,16 +90,18 @@ header .logo {
 /* Seção de aulas */
 .aulas {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr)); /* Ajuste responsivo */
     gap: 20px;
     margin: 20px;
 }
 
+/* Ajuste nas disciplinas */
 .disciplina {
     background-color: var(--box-background-light); /* Azul Inatel no tema claro */
     padding: 15px;
     border-radius: 8px;
     color: var(--box-text-light); /* Texto branco dentro das caixas no tema claro */
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
 }
 
 .disciplina h2 {
@@ -119,6 +122,7 @@ header .logo {
     padding: 15px;
     border-radius: 8px;
     color: var(--box-text-light); /* Texto branco dentro das caixas no tema claro */
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
 }
 
 .card h2 {
@@ -128,7 +132,7 @@ header .logo {
 /* Responsividade */
 @media (max-width: 768px) {
     .aulas {
-        grid-template-columns: 1fr;
+        grid-template-columns: 1fr; /* Exibição em uma coluna em telas pequenas */
     }
 }
 
@@ -182,6 +186,7 @@ p {
 
 .carousel {
     display: flex; /* Corrigido de "relative" para "flex" */
+    width: 100%;
 }
 
 .card {
