--- a/card/style.css
+++ b/card/style.css
@@ -44,6 +44,7 @@ header {
     background-color: var(--primary-color-light); /* Azul Inatel no cabeçalho */
     color: var(--secondary-color-light);
     height: 50px; /* Reduzi a altura do cabeçalho para ser mais compacto */
+    text-align: left;
 }
 
 header .icon {
@@ -63,12 +64,12 @@ header .logo {
     right: 20px;
     z-index: 1000;
     display: flex;
-    flex-direction: column;
+    flex-direction: column; /* Fazendo os botões ficarem em coluna */
     gap: 10px;
 }
 
+/* Botões de troca de tema */
 .theme-button {
-    margin: 5px 0;
     padding: 10px;
     background-color: var(--button-color); /* Roxo no botão */
     color: white;
@@ -76,6 +77,7 @@ header .logo {
     cursor: pointer;
     border-radius: 5px;
     transition: background-color 0.3s ease;
+    text-align: center; /* Alinhando texto ao centro*/
 }
 
 .theme-button:hover {
@@ -93,6 +95,7 @@ header .logo {
     grid-template-columns: repeat(auto-fill, minmax(200px, 1fr)); /* Ajuste responsivo */
     gap: 20px;
     margin: 20px;
+    text-align: left;
 }
 
 /* Ajuste nas disciplinas */
@@ -105,7 +108,7 @@ header .logo {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: left;
 }
 
 .disciplina h2 {
@@ -121,6 +124,7 @@ header .logo {
 /* Seção de notícias */
 .noticias {
     margin: 20px;
+    text-align: left;
 }
 
 .card {
@@ -134,6 +138,7 @@ header .logo {
     justify-content: space-between;
     height: 100%;
     color: var(--text-color-light); /* Corrigido para garantir que o texto no card tenha cor */
+    text-align: left;
 }
 
 .card h2 {
@@ -191,6 +196,7 @@ h3 {
     color: var(--text-color-light);
     padding-left: 5px;
     padding-right: 5px;
+    text-align: left;
 }
 
 p {
@@ -204,6 +210,7 @@ p {
     orphans: 3;
     padding-left: 5px;
     padding-right: 5px;
+    text-align: left;
 }
 
 /* Carrossel */
