--- a/animacao/style.css
+++ b/animacao/style.css
@@ -153,6 +153,37 @@ header .logo {
     margin: 0 0 10px;
 }
 
+.carousel {
+    position: relative;
+    width: 100%;
+    overflow: hidden;
+}
+
+.carousel-container {
+    display: flex;
+    transition: transform 0.5s ease-in-out;
+}
+
+.carousel-button {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    background: rgba(0, 0, 0, 0.5);
+    color: white;
+    border: none;
+    cursor: pointer;
+    padding: 10px;
+}
+
+#prev {
+    left: 10px;
+}
+
+#next {
+    right: 10px;
+}
+
+
 /* Ajustando para o tema escuro */
 .theme-dark .card {
     background-color: var(--box-background-dark);
