--- a/animacao/style.css
+++ b/animacao/style.css
@@ -620,6 +620,12 @@ body.dark-theme footer {
     font-size: 16px;
     padding: 8px;
   }
+  .card-noticias {
+    flex: 1 1 100%;  /* ocupa 100% no mobile */
+    max-width: 100%; /* remove limite de largura */
+    padding: 15px;   /* ajusta padding pro mobile */
+    font-size: 16px; /* reduz um pouco a fonte se necessário */
+  }
 
   /* Reposiciona botões no mobile */
   .prev, .next,
